src/styles/config/_dark-colors.scss
@use 'sass:color';

$color-primary: hsl(261 54% 70%);
$color-secondary: hsl(227 92% 55%);

$color-black: hsl(206 100% 7%);
$color-white: hsl(0 0% 95%);

$color-gray: hsl(0 0% 97%);
$color-gray-dark: hsl(0 0% 100% / 8%);

$color-danger: hsl(0 71% 51%);
$color-success: hsl(150 100% 33%);

$colors: (
  base: (
    card-border: hsl(207 90% 13%),
    primary: $color-primary,
    secondary: $color-secondary,
    background: $color-black,
    heading: $color-white,
    text: $color-gray,
    link: $color-primary,
    link-hover: color.scale($color-primary, $lightness: -20%),
    border: $color-gray-dark,
    mark-background: hsl(50 100% 80%),
    mark-foreground: $color-black,
    code-background: hsl(207 64% 21%),
    code-foreground: $color-white,
    blockquote-border: $color-primary,
    footer-background: hsl(0 0% 0% / 0.15)
  ),
  selection: (
    foreground: $color-white,
    background: $color-primary
  ),
  btn: (
    primary-background: hsl(261 52% 59%),
    primary-foreground: $color-white,
    primary-shadow-focus: color.adjust(hsl(261 52% 59%), $alpha: -0.75),
    secondary-background: $color-secondary,
    secondary-foreground: $color-white,
    secondary-shadow-focus: color.adjust($color-secondary, $alpha: -0.75),
    install-background: hsl(207 39% 17%),
    install-background-hover: hsl(207 23% 26%),
    install-foreground: hsl(0 0% 100%),
    install-foreground-hover: hsl(0 0% 100%),
  ),
  form: (
    background: color.scale($color-black, $lightness: 5%),
    background-disabled: $color-black,
    border: $color-gray-dark,
    border-disabled: $color-gray-dark,
    border-focus: $color-primary,
    shadow-focus: color.adjust($color-primary, $alpha: -0.75),
    check-foreground: $color-black,
    check-background: $color-primary,
    invalid: $color-danger,
    invalid-shadow: color.adjust($color-danger, $alpha: -0.75),
    label: $color-white,
    legend: $color-white,
    placeholder: hsl(0 0% 60%),
    text: $color-gray,
    select-foreground: hsl(0 0% 100%),
    valid: $color-success,
    valid-shadow: color.adjust($color-success, $alpha: -0.75)
  ),
  table: (
    border: $color-gray-dark,
    caption: $color-gray,
    heading: $color-white,
    hover: hsl(0 0% 100% / 0.05),
    text: $color-gray,
    stripe: hsl(0 0% 100% / 0.025)
  ),
  scrollbar: (
    thumb-background: hsl(0 0% 100% / 0.15),
    thumb-background-hover:	hsl(0 0% 100% / 0.25),
    track-background:	hsl(0 0% 100% / 0.05)
  ),
  breadcrumb: (
    arrow: hsl(0 0% 100% / 0.1)
  ),
  prism: (
    color: hsl(217 34% 88%),
    background: hsl(207 83% 10%),
    comment: hsl(180 9% 43%),
    punctuation: hsl(276 68% 75%),
    namespace: hsl(197 31% 77%),
    deleted: hsl(1 83% 63% / 0.56),
    boolean: hsl(350 100% 67%),
    number: hsl(14 90% 70%),
    constant: hsl(221 100% 75%),
    class-name: hsl(33 100% 77%),
    regex: hsl(217 34% 88%)
  )
);

